[package]
name = "mkl-sys"
version = "0.1.4"
authors = ["Changxi Zheng <cxz@cs.columbia.edu>"]
edition = "2018"

description = "FFI for Intel(R) MKL library"
keywords    = ["ffi"]
license     = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]

default = ["mkl-static-lp64-seq"]

# MKL config
# https://software.intel.com/content/www/us/en/develop/articles/intel-math-kernel-library-intel-mkl-and-pkg-config-tool.html
mkl-static-lp64-iomp   = ["intel-mkl-src/mkl-static-lp64-iomp"]
mkl-static-lp64-seq    = ["intel-mkl-src/mkl-static-lp64-seq"]
mkl-static-ilp64-iomp  = ["intel-mkl-src/mkl-static-ilp64-iomp"]
mkl-static-ilp64-seq   = ["intel-mkl-src/mkl-static-ilp64-seq"]
mkl-dynamic-lp64-iomp  = ["intel-mkl-src/mkl-dynamic-lp64-iomp"]
mkl-dynamic-lp64-seq   = ["intel-mkl-src/mkl-dynamic-lp64-seq"]
mkl-dynamic-ilp64-iomp = ["intel-mkl-src/mkl-dynamic-ilp64-iomp"]
mkl-dynamic-ilp64-seq  = ["intel-mkl-src/mkl-dynamic-ilp64-seq"]

# Enable downloading from AWS S3 when not found
download = ["intel-mkl-src/download"]

[dependencies]
libc = "0.2.79"
intel-mkl-src = { version = "0.6.0", default-features = false }

[dev-dependencies]
approx = "0.3.2"
num-complex = "0.3.0"
sprs = { version = "0.9.2", default-features = false }
